# COLAS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  controller.sh  reader.sh  server.sh  writer.sh
backup/abd/: CMakeLists.txt  abd_reader.c  abd_server.c  abd_writer.c
logs/: logs.txt
scripts/: reader.sh  server.sh  writer.sh
src/: CMakeLists.txt  Makefile  docker-compose.yml  env.sh  process.c  process.go  rebuild
src/abd/: CMakeLists.txt  Makefile  abd_client.c  abd_client.h  abd_reader.c  abd_reader.c~  abd_reader.h  abd_server.c  abd_writer.c
src/baseprocess/: CMakeLists.txt  client.c  client.h  server.c  server.h
src/codes/: CMakeLists.txt  Makefile  libczmq.so.3  libzmq.so.3  reed_solomon_example  reed_solomon_example.cpp  rlnc_example  rlnc_rs.cpp  rlnc_rs.h  rlnc_rs_check
src/daemons/: controller.go  getParamRoutes.go  logger.go  params.go  reader.go  routes.go  server.go  setParamRoutes.go  utilities.go  writer.go
src/logs/: logs.txt
src/soda/: CMakeLists.txt
src/sodaw/: CMakeLists.txt  Makefile  sodaw_client.c  sodaw_client.h  sodaw_reader.c  sodaw_reader.h  sodaw_server.c  sodaw_server.h  sodaw_writer.c
src/utilities/: CMakeLists.txt  algo_utils.c  algo_utils.h  helpers.c  helpers.h
system_controller/: Dockerfile  Makefile  convenient.sh  docker-compose.yml  docker-compose2.yml  docker-compose3.yml  env.sh  exp.sh  system_management.go
tools/logParser/: main  main.go
tools/logParser/latency/: latency.go
tools/logParser/throughput/: throughput.go
tools/logParser/utils/: sodawLatency.go  stats.go  taskThroughput.go  tools.go  utils.go
